--- a/PETANI/catatan1.html
+++ b/PETANI/catatan1.html
@@ -27,12 +27,30 @@
     <div id="entries" class="space-y-4"></div>
   </div>
 
+  <!-- Modal Konfirmasi Hapus -->
+  <div id="delete-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="bg-white rounded-lg p-6 shadow-lg w-full max-w-md">
+      <h3 class="text-lg font-semibold text-orange-800 mb-4">Konfirmasi Hapus</h3>
+      <p class="text-gray-700 mb-6">Apakah kamu yakin ingin menghapus catatan ini?</p>
+      <div class="flex justify-end space-x-4">
+        <button id="cancel-delete" class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400">Batal</button>
+        <button id="confirm-delete" class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-red-600">Hapus</button>
+      </div>
+    </div>
+  </div>
+
   <script>
     const titleInput = document.getElementById('judul-input');
     const textarea = document.getElementById('diary-text');
     const saveBtn = document.getElementById('save-button');
     const previousEntries = document.getElementById('entries');
     let entriesData = JSON.parse(localStorage.getItem('entriesData')) || [];
+
+    // Modal Elements
+    let deleteIndex = null;
+    const modal = document.getElementById('delete-modal');
+    const cancelBtn = document.getElementById('cancel-delete');
+    const confirmBtn = document.getElementById('confirm-delete');
 
     saveBtn.addEventListener('click', () => {
       const title = titleInput.value.trim();
@@ -71,13 +89,24 @@
     }
 
     function deleteEntry(index) {
-      const confirmDelete = confirm('Yakin ingin menghapus catatan ini?');
-      if (confirmDelete) {
-        entriesData.splice(index, 1);
+      deleteIndex = index;
+      modal.classList.remove('hidden');
+    }
+
+    cancelBtn.addEventListener('click', () => {
+      deleteIndex = null;
+      modal.classList.add('hidden');
+    });
+
+    confirmBtn.addEventListener('click', () => {
+      if (deleteIndex !== null) {
+        entriesData.splice(deleteIndex, 1);
         localStorage.setItem('entriesData', JSON.stringify(entriesData));
         renderEntries();
+        deleteIndex = null;
+        modal.classList.add('hidden');
       }
-    }
+    });
 
     function viewEntry(index) {
       localStorage.setItem('selectedEntry', index);
