--- a/PETANI/Toko.html
+++ b/PETANI/Toko.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tentang Citurs Company</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Orange Management Store</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    main {
-      flex: 1;
     }
   </style>
 </head>
 <body class="bg-orange-50">
 
   <!-- NAVBAR -->
-  <nav class="flex justify-between items-center px-6 py-4 bg-orange-600 text-white">
+  <nav class="flex justify-between items-center px-6 py-4 bg-orange-600 text-white shadow-md">
     <div class="flex items-center gap-2">
       <img src="logo.png" alt="Logo Citrus" class="max-w-[110px] max-h-[110px]" />
     </div>
@@ -35,5 +29,77 @@
     </div>
   </nav>
 
+  <!-- MAIN CONTENT -->
+  <main class="container mx-auto my-8">
+    <section class="mb-8">
+      <h2 class="text-xl font-semibold mb-4">Add Your Orange Products</h2>
+      <form class="bg-white p-6 rounded shadow">
+        <div class="mb-4">
+          <label for="productName" class="block text-gray-700">Product Name</label>
+          <input type="text" id="productName" class="mt-1 block w-full border border-gray-300 rounded p-2" required>
+        </div>
+        <div class="mb-4">
+          <label for="productDescription" class="block text-gray-700">Description</label>
+          <textarea id="productDescription" class="mt-1 block w-full border border-gray-300 rounded p-2" required></textarea>
+        </div>
+        <div class="mb-4">
+          <label for="productPrice" class="block text-gray-700">Price ($)</label>
+          <input type="number" id="productPrice" class="mt-1 block w-full border border-gray-300 rounded p-2" required>
+        </div>
+        <div class="mb-4">
+          <label for="productImage" class="block text-gray-700">Product Image URL</label>
+          <input type="url" id="productImage" class="mt-1 block w-full border border-gray-300 rounded p-2" required>
+        </div>
+        <button type="submit" class="bg-orange-600 text-white px-4 py-2 rounded">Submit for Admin Approval</button>
+      </form>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold mb-4">Available Orange Products</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+1" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Navel Oranges</h3>
+          <p class="text-gray-600">Sweet and juicy navel oranges, perfect for snacking.</p>
+          <p class="font-semibold">$1.50 each</p>
+        </div>
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+2" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Valencia Oranges</h3>
+          <p class="text-gray-600">Great for juicing and eating, these valencia oranges are a must-try.</p>
+          <p class="font-semibold">$1.75 each</p>
+        </div>
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+3" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Blood Oranges</h3>
+          <p class="text-gray-600">Unique flavor and color, these blood oranges are a delightful treat.</p>
+          <p class="font-semibold">$2.00 each</p>
+        </div>
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+4" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Mandarin Oranges</h3>
+          <p class="text-gray-600">Easy to peel and sweet, mandarin oranges are perfect for kids.</p>
+          <p class="font-semibold">$1.25 each</p>
+        </div>
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+5" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Clementine Oranges</h3>
+          <p class="text-gray-600">Seedless and sweet, clementines are a favorite snack.</p>
+          <p class="font-semibold">$1.50 each</p>
+        </div>
+        <div class="bg-white p-4 rounded shadow">
+          <img src="https://placehold.co/300x200?text=Orange+Product+6" alt="A fresh orange product" class="w-full h-40 object-cover rounded mb-4">
+          <h3 class="font-bold">Satsuma Oranges</h3>
+          <p class="text-gray-600">Juicy and flavorful, satsumas are a seasonal delight.</p>
+          <p class="font-semibold">$1.75 each</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-orange-600 p-4 text-white text-center">
+    <p>&copy; 2023 Orange Management. All rights reserved.</p>
+  </footer>
 </body>
 </html>
